# ultrafast-mcp-sequential-thinking

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  mcp-inspector-config.json  mcp.json
.github/workflows/: ci.yml  docker-release.yml  docker-test.yml  publish.yml  rust-ci.yml
scripts/: build-multi-platform.sh  test-multi-platform.sh
src/: config.rs  lib.rs
src/analytics/: mod.rs
src/export/: mod.rs
src/session/: mod.rs
src/templates/: export.css
src/thinking/: client.rs  error.rs  mod.rs  server.rs
